--- a/source/index.html
+++ b/source/index.html
@@ -121,13 +121,15 @@
               <span class="example__spending-value"> 15 000 руб.</span>
             </p>
           </div>
-          <img class="example__photo example__photo--before example__photo--after" src="img/before-mobile@1x.png" width="320" height="240" alt="Пример внешнего вида кота">
-          <div class="example__condition status-bar">
-            <button type="button" class="status-bar__condition">Было</button>
-            <div class="status-bar__line-wrap">
-              <div class="status-bar__line-color"></div>
+          <div class="example__cat">
+            <img class="example__photo example__photo--before example__photo--after" src="img/before-mobile@1x.png" width="320" height="240" alt="Пример внешнего вида кота">
+            <div class="example__condition status-bar">
+              <button type="button" class="status-bar__condition">Было</button>
+              <div class="status-bar__line-wrap">
+                <div class="status-bar__line-color"></div>
+              </div>
+              <button type="button" class="status-bar__condition">Стало</button>
             </div>
-            <button type="button" class="status-bar__condition">Стало</button>
           </div>
         </div>
       </section>
