--- a/source/catalog.html
+++ b/source/catalog.html
@@ -7,7 +7,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="page-header page">
+    <header class="page-header container">
       <div class="page-header__wrapper">
         <a href="index.html" class="page-header__logo" id="top">
           <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191px" height="39px" alt="CatEnergy">
@@ -32,7 +32,7 @@
     </header>
 
     <main class="page-main">
-      <section class="page-main__catalog page">
+      <section class="page-main__catalog container">
         <h1 class="page-main__title page-main__title--catalog">Каталог продукции</h1>
         <ul class="page-main__list production">
           <li class="production__item">
@@ -253,7 +253,7 @@
         </ul>
       </section>
 
-      <section class="more-goods page">
+      <section class="more-goods container">
         <h2 class="more-goods__title title title--hr">Дополнительные товары</h2>
         <ul class="more-goods__list">
           <li class="more-goods__item">
@@ -289,7 +289,7 @@
       </section>
 
       <section class="contacts">
-        <div class="contacts__wrap contacts__wrap--grey page">
+        <div class="contacts__wrap contacts__wrap--grey container">
           <div class="contacts__text">
             <h2 class="contacts__title">Приглашаем к&nbsp;сотрудничеству дилеров!</h2>
             <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
@@ -300,7 +300,7 @@
       </section>
     </main>
     <footer class="page-footer">
-      <div class="page">
+      <div class="container">
         <a class="page-footer__logo" href="index.html">
           <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128px" height="24px" alt="CatEnergy">
         </a>
