--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="page-header page">
+    <header class="page-header container">
       <div class="page-header__wrapper">
         <a class="page-header__logo" id="top">
           <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191px" height="39px" alt="CatEnergy">
@@ -33,7 +33,7 @@
 
     <main class="page-main">
       <div class="page-main__banner">
-        <div class="page">
+        <div class="container">
           <div class="page-main__banner-green">
             <h1 class="page-main__title page-main__title--white">Функциональное питание для котов</h1>
             <p class="page-main__text page-main__text--white">Занялся собой? Займись котом!</p>
@@ -43,7 +43,7 @@
           <a class="page-main__choice button" href="programs.html">Подобрать программу</a>
         </div>
       </div>
-      <section class="programs page">
+      <section class="programs container">
         <h2 class="visually-hidden">Программы питания</h2>
 
         <article class="programs__item training">
@@ -53,7 +53,7 @@
             <p class="training__description">
               Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
             </p>
-            <a class="training__link">Каталог Slim</a>
+            <a class="training__link" href="slim.html">Каталог Slim</a>
           </div>
         </article>
         <article class="programs__item training">
@@ -64,13 +64,13 @@
               Заработать авторитет среди дворовых котов и даже собак?
               Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
             </p>
-            <a class="training__link">Каталог Pro</a>
+            <a class="training__link" href="pro.html">Каталог Pro</a>
           </div>
         </article>
       </section>
 
-      <section class="how-work page">
-        <h2 class="how-work__title title">Как это работает</h2>
+      <section class="how-work container">
+        <h2 class="how-work__title">Как это работает</h2>
         <ul class="how-work__list property-list">
           <li class="property-list__item">
             <div class="property-list__logo property-list__logo--leaf"></div>
@@ -93,20 +93,20 @@
           <li class="property-list__item">
             <div class="property-list__logo property-list__logo--clock"></div>
             <p class="property-list__description">
-              Уже через месяц наслаждайтесь изменениями к лучшему <br>вашего питомца!
+              Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
             </p>
           </li>
         </ul>
       </section>
 
       <section class="example">
-        <div class="page example__wrap">
-          <h2 class="example__title title">Живой пример</h2>
+        <div class="container example__wrap">
+          <h2 class="example__title">Живой пример</h2>
           <p class="example__description">
             Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
           </p>
           <div class="example__indicators">
-            <ul class="index-list"> <!-- нужен ли здесь класс скажем example__list ? -->
+            <ul class="index-list">
               <li class="index-list__item">
                 <span class="index-list__value">5 Кг</span>
                 <span class="index-list__title">снижение веса</span>
@@ -121,21 +121,21 @@
               <span class="example__spending-value"> 15 000 руб.</span>
             </p>
           </div>
-          <div class="example__cat">
-            <img class="example__photo example__photo--before example__photo--after" src="img/before-mobile@1x.png" width="320" height="240" alt="Пример внешнего вида кота">
-            <div class="example__condition status-bar">
-              <button type="button" class="status-bar__condition">Было</button>
-              <div class="status-bar__line-wrap">
-                <div class="status-bar__line-color"></div>
-              </div>
-              <button type="button" class="status-bar__condition">Стало</button>
+        </div>
+        <div class="example__cat container">
+          <img class="example__photo example__photo--before example__photo--after" src="img/before-mobile@1x.png" width="320" height="240" alt="Пример внешнего вида кота">
+          <div class="example__condition status-bar">
+            <button type="button" class="status-bar__condition">Было</button>
+            <div class="status-bar__line-wrap">
+              <div class="status-bar__line-color"></div>
             </div>
+            <button type="button" class="status-bar__condition">Стало</button>
           </div>
         </div>
       </section>
 
       <section class="contacts">
-        <div class="contacts__wrap page">
+        <div class="contacts__wrap container">
           <div class="contacts__text">
             <h2 class="contacts__title">Приглашаем к&nbsp;сотрудничеству дилеров!</h2>
             <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
@@ -147,7 +147,7 @@
 
     </main>
     <footer class="page-footer">
-      <div class="page">
+      <div class="container">
         <a class="page-footer__logo" href="#top">
           <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128px" height="24px" alt="CatEnergy">
         </a>
