--- a/source/programs.html
+++ b/source/programs.html
@@ -7,7 +7,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="page-header page">
+    <header class="page-header container">
       <div class="page-header__wrapper">
         <a href="index.html" class="page-header__logo" id="top">
           <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191px" height="39px" alt="CatEnergy">
@@ -32,11 +32,11 @@
     </header>
 
     <main class="page-main">
-      <div class="page-main__wrapper page">
+      <div class="page-main__wrapper container">
         <h1 class="page-main__title page-main__title--programs">Подбор программы</h1>
         <p class="page-main__text page-main__text--programs">Заполните анкету и мы подберем программу питания для вашего кота</p>
       </div>
-      <section class="page-main__form page">
+      <section class="page-main__form container">
         <form class="form" method="post" action="https://echo.htmlacademy.ru">
           <div class="form__cat">
             <ul class="form__about-cat about-list">
@@ -134,7 +134,7 @@
         </form>
       </section>
       <section class="contacts">
-        <div class="contacts__wrap contacts__wrap--grey page">
+        <div class="contacts__wrap contacts__wrap--grey container">
           <div class="contacts__text">
             <h2 class="contacts__title">Приглашаем к&nbsp;сотрудничеству дилеров!</h2>
             <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
@@ -146,7 +146,7 @@
 
     </main>
     <footer class="page-footer">
-      <div class="page">
+      <div class="container">
         <a class="page-footer__logo" href="index.html">
           <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128px" height="24px" alt="CatEnergy">
         </a>
