--- a/source/catalog.html
+++ b/source/catalog.html
@@ -7,9 +7,9 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="page-header container">
+    <header class="page-header">
       <div class="page-header__wrapper">
-        <a href="index.html" class="page-header__logo" id="top">
+        <a class="page-header__logo">
           <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191px" height="39px" alt="CatEnergy">
         </a>
         <button class="page-header__toggle page-header__toggle--off" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -20,7 +20,7 @@
             <li class="main-nav__item">
               <a href="index.html">Главная</a>
             </li>
-            <li class="main-nav__item  main-nav__item--active">
+            <li class="main-nav__item main-nav__item--active">
               <a>Каталог продукции</a>
             </li>
             <li class="main-nav__item">
@@ -32,8 +32,8 @@
     </header>
 
     <main class="page-main">
-      <section class="page-main__catalog container">
-        <h1 class="page-main__title page-main__title--catalog">Каталог продукции</h1>
+      <section class="page-main__catalog">
+        <h1 class="page-main__title page-main__title--catalog container">Каталог продукции</h1>
         <ul class="page-main__list production">
           <li class="production__item">
             <div class="production__card">
@@ -253,9 +253,9 @@
         </ul>
       </section>
 
-      <section class="more-goods container">
-        <h2 class="more-goods__title title title--hr">Дополнительные товары</h2>
-        <ul class="more-goods__list">
+      <section class="more-goods">
+        <h2 class="more-goods__title title container"><span class="more-goods__title-hr">Дополнительные товары</span></h2>
+        <ul class="more-goods__list container">
           <li class="more-goods__item">
             <h3 class="more-goods__product">Сахарозаменитель</h3>
             <span class="more-goods__value">1 упаковка (100 г)</span>
@@ -281,18 +281,18 @@
             <a class="more-goods__order button" href="form-order.html">Заказать</a>
           </li>
         </ul>
-        <div class="more-goods__banner">
+        <div class="more-goods__banner container">
           <a class="more-goods__link" href="form-order.html">
             <p>Закажите все и&nbsp;получите чехол для кота в подарок!</p>
           </a>
         </div>
       </section>
 
-      <section class="contacts">
-        <div class="contacts__wrap contacts__wrap--grey container">
+      <section class="contacts contacts--grey">
+        <div class="contacts__wrap">
           <div class="contacts__text">
             <h2 class="contacts__title">Приглашаем к&nbsp;сотрудничеству дилеров!</h2>
-            <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+            <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 <span>Санкт-Петербург</span></p>
           </div>
         </div>
         <img class="contacts__map-nojs" src="img/bg-map-mobile@1x.png" width="320px" height="400px" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
@@ -323,7 +323,7 @@
             </li>
           </ul>
         </div>
-        <a class="page-footer__copyright" href="http://htmlacademy.ru" target="_blank">
+        <a class="page-footer__copyright" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
           <span>HTML Academy</span>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><path fill="#666666" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></svg>
         </a>
