--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="page-header container">
+    <header class="page-header">
       <div class="page-header__wrapper">
         <a class="page-header__logo" id="top">
           <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191px" height="39px" alt="CatEnergy">
@@ -33,13 +33,13 @@
 
     <main class="page-main">
       <div class="page-main__banner">
+        <div class="page-main__banner-green">
+          <h1 class="page-main__title page-main__title--white container">Функциональное питание для котов</h1>
+          <p class="page-main__text page-main__text--white container">Занялся собой? Займись котом!</p>
+        </div>
+        <div class="page-main__banner-desktop"></div>
+        <img class="page-main__image" src="img/index-can-mobile@1x.png" width="280px" height="271px" alt="Баночка замечательного корма">
         <div class="container">
-          <div class="page-main__banner-green">
-            <h1 class="page-main__title page-main__title--white">Функциональное питание для котов</h1>
-            <p class="page-main__text page-main__text--white">Занялся собой? Займись котом!</p>
-          </div>
-          <div class="page-main__banner-desktop"></div>
-          <img class="page-main__image" src="img/index-can-mobile@1x.png" width="280px" height="271px" alt="Баночка замечательного корма">
           <a class="page-main__choice button" href="programs.html">Подобрать программу</a>
         </div>
       </div>
@@ -70,8 +70,8 @@
       </section>
 
       <section class="how-work container">
-        <h2 class="how-work__title">Как это работает</h2>
-        <ul class="how-work__list property-list">
+        <h2 class="how-work__title title">Как это работает</h2>
+        <ol class="how-work__list property-list">
           <li class="property-list__item">
             <div class="property-list__logo property-list__logo--leaf"></div>
             <p class="property-list__description">
@@ -93,15 +93,15 @@
           <li class="property-list__item">
             <div class="property-list__logo property-list__logo--clock"></div>
             <p class="property-list__description">
-              Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+              Уже через месяц наслаждайтесь изменениями к лучшему вашего&nbsp;питомца!
             </p>
           </li>
-        </ul>
+        </ol>
       </section>
 
       <section class="example">
-        <div class="container example__wrap">
-          <h2 class="example__title">Живой пример</h2>
+        <div class="container">
+          <h2 class="example__title title">Живой пример</h2>
           <p class="example__description">
             Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
           </p>
@@ -113,7 +113,7 @@
               </li>
               <li class="index-list__item">
                 <span class="index-list__value">60 дней</span>
-                <span class="index-list__title">затрачено времени</span>
+                <span class="index-list__title index-list__title--big">затрачено времени</span>
               </li>
             </ul>
             <p class="example__spending">
@@ -122,7 +122,7 @@
             </p>
           </div>
         </div>
-        <div class="example__cat container">
+        <div class="example__cat">
           <img class="example__photo example__photo--before example__photo--after" src="img/before-mobile@1x.png" width="320" height="240" alt="Пример внешнего вида кота">
           <div class="example__condition status-bar">
             <button type="button" class="status-bar__condition">Было</button>
@@ -135,10 +135,10 @@
       </section>
 
       <section class="contacts">
-        <div class="contacts__wrap container">
+        <div class="contacts__wrap">
           <div class="contacts__text">
             <h2 class="contacts__title">Приглашаем к&nbsp;сотрудничеству дилеров!</h2>
-            <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+            <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 <span>Санкт-Петербург</sapn></p>
           </div>
         </div>
         <img class="contacts__map-nojs" src="img/bg-map-mobile@1x.png" width="320px" height="400px" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
@@ -170,7 +170,7 @@
             </li>
           </ul>
         </div>
-        <a class="page-footer__copyright" href="http://htmlacademy.ru" target="_blank">
+        <a class="page-footer__copyright" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
           <span>HTML Academy</span>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><path fill="#666666" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></svg>
         </a>
