--- a/source/catalog.html
+++ b/source/catalog.html
@@ -34,12 +34,12 @@
     <main class="page-main">
       <section class="page-main__catalog">
         <h1 class="page-main__title page-main__title--catalog container">Каталог продукции</h1>
-        <ul class="page-main__list production">
+        <ul class="page-main__list production container">
           <li class="production__item">
             <div class="production__card">
               <div class="production__logo">
                 <a class="production__link-img" href="about-chicken500.html">
-                  <img class="production__photo" src="img/chicken-small-mobile@1x.jpg" width="140px" height="144px" alt="Cat Energy Pro 500г курица">
+                  <img class="production__photo" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Pro 500г курица">
                 </a>
               </div>
               <div class="production__text">
@@ -255,36 +255,38 @@
 
       <section class="more-goods">
         <h2 class="more-goods__title title container"><span class="more-goods__title-hr">Дополнительные товары</span></h2>
-        <ul class="more-goods__list container">
-          <li class="more-goods__item">
-            <h3 class="more-goods__product">Сахарозаменитель</h3>
-            <span class="more-goods__value">1 упаковка (100 г)</span>
-            <span class="more-goods__price">200 Р.</span>
-            <a class="more-goods__order button" href="form-order.html">Заказать</a>
-          </li>
-          <li class="more-goods__item">
-            <h3 class="more-goods__product">Питьевая вода</h3>
-            <span class="more-goods__value">5 литров</span>
-            <span class="more-goods__price">50 Р.</span>
-            <a class="more-goods__order button" href="form-order.html">Заказать</a>
-          </li>
-          <li class="more-goods__item">
-            <h3 class="more-goods__product">Молоко</h3>
-            <span class="more-goods__value">1 литр</span>
-            <span class="more-goods__price">100 Р.</span>
-            <a class="more-goods__order button" href="form-order.html">Заказать</a>
-          </li>
-          <li class="more-goods__item">
-            <h3 class="more-goods__product">Витамины</h3>
-            <span class="more-goods__value">1 упаковка (30 г)</span>
-            <span class="more-goods__price">300 Р.</span>
-            <a class="more-goods__order button" href="form-order.html">Заказать</a>
-          </li>
-        </ul>
-        <div class="more-goods__banner container">
-          <a class="more-goods__link" href="form-order.html">
-            <p>Закажите все и&nbsp;получите чехол для кота в подарок!</p>
-          </a>
+        <div class="more-goods__wrapper container">
+          <ul class="more-goods__list container">
+            <li class="more-goods__item">
+              <h3 class="more-goods__product">Сахарозаменитель</h3>
+              <span class="more-goods__value">1 упаковка (100 г)</span>
+              <span class="more-goods__price">200 Р.</span>
+              <a class="more-goods__order button" href="form-order.html">Заказать</a>
+            </li>
+            <li class="more-goods__item">
+              <h3 class="more-goods__product">Питьевая вода</h3>
+              <span class="more-goods__value">5 литров</span>
+              <span class="more-goods__price">50 Р.</span>
+              <a class="more-goods__order button" href="form-order.html">Заказать</a>
+            </li>
+            <li class="more-goods__item">
+              <h3 class="more-goods__product">Молоко</h3>
+              <span class="more-goods__value">1 литр</span>
+              <span class="more-goods__price">100 Р.</span>
+              <a class="more-goods__order button" href="form-order.html">Заказать</a>
+            </li>
+            <li class="more-goods__item">
+              <h3 class="more-goods__product">Витамины</h3>
+              <span class="more-goods__value">1 упаковка (30 г)</span>
+              <span class="more-goods__price">300 Р.</span>
+              <a class="more-goods__order button" href="form-order.html">Заказать</a>
+            </li>
+          </ul>
+          <div class="more-goods__banner container">
+            <a class="more-goods__link" href="form-order.html">
+              <p>Закажите все и&nbsp;получите чехол для кота в подарок!</p>
+            </a>
+          </div>
         </div>
       </section>
 
