--- a/source/index.html
+++ b/source/index.html
@@ -100,36 +100,40 @@
       </section>
 
       <section class="example">
-        <div class="container">
-          <h2 class="example__title title">Живой пример</h2>
-          <p class="example__description">
-            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-          </p>
-          <div class="example__indicators">
-            <ul class="index-list">
-              <li class="index-list__item">
-                <span class="index-list__value">5 Кг</span>
-                <span class="index-list__title">снижение веса</span>
-              </li>
-              <li class="index-list__item">
-                <span class="index-list__value">60 дней</span>
-                <span class="index-list__title index-list__title--big">затрачено времени</span>
-              </li>
-            </ul>
-            <p class="example__spending">
-              <span class="example__spending-text">Затраты на питание:</span>
-              <span class="example__spending-value"> 15 000 руб.</span>
-            </p>
-          </div>
-        </div>
-        <div class="example__cat">
-          <img class="example__photo example__photo--before example__photo--after" src="img/before-mobile@1x.png" width="320" height="240" alt="Пример внешнего вида кота">
-          <div class="example__condition status-bar">
-            <button type="button" class="status-bar__condition">Было</button>
-            <div class="status-bar__line-wrap">
-              <div class="status-bar__line-color"></div>
+        <h2 class="example__title title container">Живой пример</h2>
+        <div class="example__wrapper">
+          <div class="container">
+            <div class="example__text">
+              <p class="example__description">
+                Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+              </p>
+              <div class="example__indicators">
+                <ul class="index-list">
+                  <li class="index-list__item">
+                    <span class="index-list__value">5 Кг</span>
+                    <span class="index-list__title">снижение веса</span>
+                  </li>
+                  <li class="index-list__item">
+                    <span class="index-list__value">60 дней</span>
+                    <span class="index-list__title index-list__title--big">затрачено времени</span>
+                  </li>
+                </ul>
+                <p class="example__spending">
+                  <span class="example__spending-text">Затраты на питание:</span>
+                  <span class="example__spending-value"> 15 000 руб.</span>
+                </p>
+              </div>
             </div>
-            <button type="button" class="status-bar__condition">Стало</button>
+            <div class="example__cat">
+              <img class="example__photo example__photo--before example__photo--after" src="img/before-mobile@1x.png" width="320" height="240" alt="Пример внешнего вида кота">
+              <div class="example__condition status-bar">
+                <button type="button" class="status-bar__condition">Было</button>
+                <div class="status-bar__line-wrap">
+                  <div class="status-bar__line-color"></div>
+                </div>
+                <button type="button" class="status-bar__condition">Стало</button>
+              </div>
+            </div>
           </div>
         </div>
       </section>
