--- a/source/programs.html
+++ b/source/programs.html
@@ -42,19 +42,19 @@
             <ul class="form__about-cat about-list container">
               <li class="about-list__item">
                 <label class="form__label" for="cat-name">Имя:*</label>
-                <input class="form__input" type="text" name="cat-name" id="cat-name" placeholder="Барсик" required>
+                <input class="form__input cat-name" type="text" name="cat-name" id="cat-name" placeholder="Барсик" required>
               </li>
               <li class="about-list__item">
                 <label class="form__label" for="cat-weight">Вес(кг):*</label>
-                <input class="form__input" type="number" name="cat-weight" id="cat-weight" placeholder="7" required>
+                <input class="form__input cat-weight" type="number" name="cat-weight" id="cat-weight" placeholder="7" required>
               </li>
               <li class="about-list__item">
                 <label class="form__label" for="cat-age">Возраст(лет):</label>
                 <input class="form__input" type="number" name="cat-age" id="cat-age" placeholder="7">
               </li>
             </ul>
-            <div class="target-list__wrapper">
-              <ul class="form__target target-list container">
+            <div class="form__container">
+              <ul class="form__target target-list target-list__container container">
                 <li class="target-list__item">
                   <label class="form__label">
                     <input type="radio" class="form__radio visually-hidden" name="cat-target" checked>
@@ -77,24 +77,37 @@
             </div>
           </div>
           <fieldset class="form__contacts">
-            <div class="container">
+            <div class="container container--p40">
               <h2 class="form__title form__title--pr title"><span class="hr">Контактные данные (владельца кота)</span></h2>
               <ul class="form__data contacts-list">
                 <li class="contacts-list__item">
                   <label class="form__label" for="master-email">E-mail:*</label>
                   <input class="form__input form__input--email" type="email" id="master-email" name="master-email" placeholder="kuklachev@gmail.com" required>
-                  <span class="form__icon form__icon--email"></span>
+                  <span class="form__icon form__icon--email">
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 17 13" style="enable-background:new 0 0 17 13;" xml:space="preserve" fill="currentColor">
+                      <path d="M15.6,11.6H1.4V5.8H0V13h17V5.8h-1.4V11.6z M0,0v2.3l8.5,7.1L17,2.3V0H0z M15.6,1.6L8.5,7.5L1.4,1.6V1.4h14.2L15.6,1.6z"/>
+                    </svg>
+                  </span>
                 </li>
                 <li class="contacts-list__item">
                   <label class="form__label" for="master-tel">Телефон:*</label>
                   <input class="form__input form__input--tel" type="tel" id="master-tel" name="master-tel" placeholder="8 (960) 900-60-90" required>
-                  <span class="form__icon form__icon--tel"></span>
+                  <span class="form__icon form__icon--tel">
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 20 20" style="enable-background:new 0 0 20 20;" xml:space="preserve" fill="currentColor">
+                      <path d="M17.9,9.4H9.4v1.2h8.5l-2.1,2.1l0.9,0.9l3.1-3.1c0.2-0.2,0.2-0.6,0-0.9l-3.1-3.1l-0.9,0.9L17.9,9.4z"/>
+                      <path
+                        d="M8.1,19.4v-6.2c0-0.3-0.3-0.6-0.6-0.6H4.4l0,0H3.1l0,0c0,0.7,0.6,1.2,1.2,1.2h2.5v5H3.1c-1,0.1-1.8-0.7-1.9-1.7
+                      c0-0.1,0-0.1,0-0.2V3.1c0-1,0.8-1.8,1.7-1.8c0.1,0,0.1,0,0.2,0h3.7v5H4.4c-0.7,0-1.2,0.6-1.2,1.2h4.4c0.3,0,0.6-0.3,0.6-0.6V0.6
+                      C8.1,0.3,7.8,0,7.5,0H3.1C1.5-0.1,0.1,1.2,0,2.9C0,3,0,3.1,0,3.1v13.7c-0.1,1.7,1.2,3.1,2.9,3.1c0.1,0,0.2,0,0.2,0h4.4
+                      C7.8,20,8.1,19.7,8.1,19.4z"/>
+                    </svg>
+                  </span>
                 </li>
               </ul>
             </div>
           </fieldset>
           <fieldset class="form__comment">
-            <div class="container">
+            <div class="container container--p40">
               <h2 class="form__title title"><label for="form-comment" class="hr">Комментарий</label></h2>
               <textarea
                 class="form__textarea"
@@ -105,7 +118,7 @@
             </div>
           </fieldset>
           <fieldset class="form__extra">
-            <div class="container">
+            <div class="container container--p40">
               <h2 class="form__title title"><span class="hr">Дополнительно</span></h2>
               <ul class="form__add add-list">
                 <li class="add-list__item">
@@ -163,8 +176,8 @@
             <li class="social-list__item">
               <a href="http://vk.com" target="_blank">
                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                viewBox="0 0 22 12" width="30" height="16" style="enable-background:new 0 0 22 12;" xml:space="preserve">
-                <path d="M17.6,12c-0.3,0-0.9-0.1-1.5-0.5c-0.5-0.3-0.9-0.7-1.3-1.2c-0.3-0.3-0.9-0.9-1.1-0.9c-0.2,0.1-0.4,0.7-0.3,1.2
+                viewBox="0 0 22 12" width="30" height="16" style="enable-background:new 0 0 22 12; " xml:space="preserve" fill="currentColor">
+                  <path d="M17.6,12c-0.3,0-0.9-0.1-1.5-0.5c-0.5-0.3-0.9-0.7-1.3-1.2c-0.3-0.3-0.9-0.9-1.1-0.9c-0.2,0.1-0.4,0.7-0.3,1.2
                   c0,0.1,0,0.6-0.3,0.9c-0.3,0.3-0.8,0.4-0.9,0.4h-1.4c-0.7,0-3.2-0.2-5.4-2.3C2.5,7.1,0.2,2.2,0.1,2C0,1.6-0.1,1.2,0.2,0.9
                   s0.8-0.4,1-0.4h3.1c0.1,0,0.4,0.1,0.7,0.3C5.3,1,5.4,1.3,5.5,1.4c0.7,1.5,1.5,2.8,2.6,4C8.2,5,8.3,4,8.2,3.1c0-0.4-0.1-0.8-0.2-1
                   C7.9,2,7.7,1.9,7.5,1.9L6.9,1.4c0-0.5,0.5-0.9,0.9-1.1C8.3,0.1,9.1,0,10.1,0h0.5c0.9,0,1.2,0.1,1.6,0.1c1.2,0.3,1.2,1.3,1.1,2.5v1.6
@@ -183,14 +196,11 @@
             <li class="social-list__item">
               <a href="http://instagram.com" target="_blank">
                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                viewBox="0 0 16.1 16" width="23" height="23" style="enable-background:new 0 0 16.1 16;" xml:space="preserve">
-                  <style type="text/css">
-                    .st0{fill:#231F20;}
-                  </style>
+                viewBox="0 0 16.1 16" width="23" height="23" style="enable-background:new 0 0 16.1 16;" xml:space="preserve" fill="currentColor">
                   <path class="st0" d="M11.8,1C13.6,1,15,2.4,15,4.2v7.7c0,1.7-1.4,3.1-3.1,3.1H4.2C2.4,15,1,13.6,1,11.8V4.2C1,2.4,2.4,1,4.2,1H11.8
                   M11.8,0H4.2C1.9,0,0,1.9,0,4.2v7.7C0,14.1,1.9,16,4.2,16h7.7c2.3,0,4.2-1.9,4.2-4.2V4.2C16,1.9,14.1,0,11.8,0z"/>
                   <path class="st0" d="M8,4.9c1.7,0,3.1,1.4,3.1,3.1S9.7,11.1,8,11.1S4.9,9.7,4.9,8S6.3,4.9,8,4.9 M8,3.9C5.7,3.9,3.9,5.7,3.9,8
-                    s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S10.3,3.9,8,3.9z"/>
+                  s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S10.3,3.9,8,3.9z"/>
                   <circle class="st0" cx="12.3" cy="3.7" r="0.9"/>
                 </svg>
               </a>
@@ -198,7 +208,7 @@
             <li class="social-list__item">
               <a href="http://fb.com" target="_blank">
                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                viewBox="0 0 10 19" width="14" height="27" style="enable-background:new 0 0 10 19;" xml:space="preserve">
+                viewBox="0 0 10 19" width="14" height="27" style="enable-background:new 0 0 10 19;" xml:space="preserve" fill="currentColor">
                   <path d="M7.1,19H2v-8.8H0V5.8h1.9C1.8,3.8,2.1,2.4,3,1.4C3.8,0.5,5,0.1,6.5,0H10v4.2H7.2C7.1,4.4,7,5,7,5.8h3v4.4H7.1V19z M3.1,18
                   h2.8V9.1h2.9V6.8H5.9V6.3c0-1.4,0-2.6,0.7-3.1l0.1-0.1h2.1V1H6.5c-1.2,0.1-2,0.4-2.6,1c-0.8,0.8-1,2.3-0.8,4.2l0.1,0.6H1.1v2.3h2V18
                   z"/>
@@ -214,5 +224,6 @@
       </div>
     </footer>
     <script src="js/mobile-nav.js"></script>
+    <script src="js/input-error.js"></script>
   </body>
 </html>
