--- a/source/index.html
+++ b/source/index.html
@@ -152,7 +152,7 @@
     </main>
     <footer class="page-footer">
       <div class="page-footer__container container">
-        <a class="page-footer__logo" href="index.html">
+        <a class="page-footer__logo" href="#top">
           <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128px" height="24px" alt="CatEnergy">
         </a>
         <div class="page-footer__wrapper">
