catalog bem error

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -282,7 +282,7 @@
               <a class="more-goods__order button" href="form-order.html">Заказать</a>
             </li>
           </ul>
-          <div class="more-goods__banner more-goods__container--small container">
+          <div class="more-goods__banner more-goods__container more-goods__container--small container">
             <a class="more-goods__link" href="form-order.html">
               <p>Закажите все и&nbsp;получите чехол для кота в подарок!</p>
             </a>
