--- a/source/catalog.html
+++ b/source/catalog.html
@@ -13,7 +13,7 @@
           <picture>
             <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-            <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191px" height="39px" alt="CatEnergy">
+            <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="39" alt="CatEnergy">
           </picture>
         </a>
         <button class="page-header__toggle page-header__toggle--off" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -332,7 +332,7 @@
         <picture>
           <source media="(min-width: 1300px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
           <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablt@2x.png 2x">
-          <img class="contacts__map-nojs" src="img/bg-map-mobile@1x.png" width="320px" height="400px" srcset="img/bg-map-mobile@2x.png 2x" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+          <img class="contacts__map-nojs" src="img/bg-map-mobile@1x.png" width="320" height="400" srcset="img/bg-map-mobile@2x.png 2x" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
         </picture>
         <iframe class="contacts__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036956120251!2d30.321819042794047!3d59.93871800241896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1586373870144!5m2!1sru!2sru"  allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </section>
@@ -341,7 +341,7 @@
     <footer class="page-footer">
       <div class="page-footer__container container">
         <a class="page-footer__logo" href="index.html">
-          <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128px" height="24px" alt="CatEnergy">
+          <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24" alt="CatEnergy">
         </a>
         <div class="page-footer__wrapper">
           <ul class="page-footer__social social-list">
