--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
     <link href="css/style.min.css" rel="stylesheet">
+    <script>document.createElement( "picture" );</script>
+    <script src="js/picturefill.js" async></script>
   </head>
   <body>
     <header class="page-header">
