исправления замечаний неизвестного наставника

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
     <link href="css/style.min.css" rel="stylesheet">
+    <link rel="preload" href="fonts/oswaldregular.woff" as="font">
+    <link rel="preload" href="fonts/oswaldregular.woff2" as="font">
+    <link rel="preload" href="fonts/oswaldmedium.woff" as="font">
+    <link rel="preload" href="fonts/oswaldmedium.woff2" as="font">
     <script>document.createElement( "picture" );</script>
     <script src="js/picturefill.js" async></script>
   </head>
@@ -18,9 +22,9 @@
             <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="39" alt="CatEnergy">
           </picture>
         </a>
-        <button class="page-header__toggle page-header__toggle--off" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <button class="page-header__toggle page-header__toggle--off page-header__toggle--nojs" type="button"><span class="visually-hidden">Открыть меню</span></button>
       </div>
-      <nav class="page-header__nav main-nav main-nav--closed">
+      <nav class="page-header__nav main-nav">
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
             <li class="main-nav__item">
@@ -46,6 +50,9 @@
               <div class="production__logo">
                 <a class="production__link-img" href="about-chicken500.html">
                   <picture>
+                    <source type="image/webp" media="(min-width: 1300px)" srcset="img/chicken-small-desktop@1x.webp 1x, img/chicken-small-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.webp 1x, img/chicken-small-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="img/chicken-small-mobile@1x.webp 1x, img/chicken-small-mobile@2x.webp 2x">
                     <source media="(min-width: 1300px)" srcset="img/chicken-small-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
                     <img class="production__photo production__photo--small" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Cat Energy Pro 500г курица">
@@ -80,9 +87,12 @@
               <div class="production__logo">
                 <a class="production__link-img" href="about-chicken1000.html">
                   <picture>
+                    <source type="image/webp" media="(min-width: 1300px)" srcset="img/chicken-big-desktop@1x.webp 1x, img/chicken-big-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.webp 1x, img/chicken-big-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="img/chicken-big-mobile@1x.webp 1x, img/chicken-big-mobile@2x.webp 2x">
                     <source media="(min-width: 1300px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
-                    <img class="production__photo production__photo--big" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Cat Energy Pro 1000г курица">
+                    <img class="production__photo production__photo--big" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Cat Energy Pro 500г курица">
                   </picture>
                 </a>
               </div>
@@ -114,9 +124,12 @@
               <div class="production__logo">
                 <a class="production__link-img" href="about-fish500.html">
                   <picture>
+                    <source type="image/webp" media="(min-width: 1300px)" srcset="img/fish-small-desktop@1x.webp 1x, img/fish-small-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.webp 1x, img/fish-small-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="img/fish-small-mobile@1x.webp 1x, img/fish-small-mobile@2x.webp 2x">
                     <source media="(min-width: 1300px)" srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
-                    <img class="production__photo production__photo--small" src="img/fish-small-mobile@1x.jpg" width="140" height="144" srcset="img/fish-small-mobile@2x.jpg 2x" alt="Cat Energy Pro 500г рыба">
+                    <img class="production__photo production__photo--small" src="img/fish-small-mobile@1x.jpg" width="140" height="144" srcset="img/fish-small-mobile@2x.jpg 2x" alt="Cat Energy Pro 500г курица">
                   </picture>
                 </a>
               </div>
@@ -148,9 +161,12 @@
               <div class="production__logo">
                 <a class="production__link-img" href="about-fish1000.html">
                   <picture>
+                    <source type="image/webp" media="(min-width: 1300px)" srcset="img/fish-big-desktop@1x.webp 1x, img/fish-big-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.webp 1x, img/fish-big-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="img/fish-big-mobile@1x.webp 1x, img/fish-big-mobile@2x.webp 2x">
                     <source media="(min-width: 1300px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
-                    <img class="production__photo production__photo--big" src="img/fish-big-mobile@1x.jpg" width="140" height="144" srcset="img/fish-big-mobile@2x.jpg 2x" alt="Cat Energy Pro 1000г рыба">
+                    <img class="production__photo production__photo--big" src="img/fish-big-mobile@1x.jpg" width="140" height="144" srcset="img/fish-big-mobile@2x.jpg 2x" alt="Cat Energy Pro 500г курица">
                   </picture>
                 </a>
               </div>
@@ -182,9 +198,12 @@
               <div class="production__logo">
                 <a class="production__link-img" href="about-buckwheat500.html">
                   <picture>
+                    <source type="image/webp" media="(min-width: 1300px)" srcset="img/buckwheat-small-desktop@1x.webp 1x, img/buckwheat-small-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.webp 1x, img/buckwheat-small-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="img/buckwheat-small-mobile@1x.webp 1x, img/buckwheat-small-mobile@2x.webp 2x">
                     <source media="(min-width: 1300px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
-                    <img class="production__photo production__photo--small" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Cat Energy Slim 500г гречка">
+                    <img class="production__photo production__photo--small" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Cat Energy Pro 500г курица">
                   </picture>
                 </a>
               </div>
@@ -216,9 +235,12 @@
               <div class="production__logo">
                 <a class="production__link-img" href="about-buckwheat1000.html">
                   <picture>
+                    <source type="image/webp" media="(min-width: 1300px)" srcset="img/buckwheat-big-desktop@1x.webp 1x, img/buckwheat-big-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.webp 1x, img/buckwheat-big-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="img/buckwheat-big-mobile@1x.webp 1x, img/buckwheat-big-mobile@2x.webp 2x">
                     <source media="(min-width: 1300px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
-                    <img class="production__photo production__photo--big" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Cat Energy Slim 1000г гречка">
+                    <img class="production__photo production__photo--big" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Cat Energy Pro 500г курица">
                   </picture>
                 </a>
               </div>
@@ -250,9 +272,12 @@
               <div class="production__logo">
                 <a class="production__link-img" href="about-rice500.html">
                   <picture>
+                    <source type="image/webp" media="(min-width: 1300px)" srcset="img/rice-small-desktop@1x.webp 1x, img/rice-small-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.webp 1x, img/rice-small-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="img/rice-small-mobile@1x.webp 1x, img/rice-small-mobile@2x.webp 2x">
                     <source media="(min-width: 1300px)" srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
                     <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
-                    <img class="production__photo production__photo--small" src="img/rice-small-mobile@1x.jpg" width="140" height="144" srcset="img/rice-small-mobile@2x.jpg 2x" alt="Cat Energy Slim 500г рис">
+                    <img class="production__photo production__photo--small" src="img/rice-small-mobile@1x.jpg" width="140" height="144" srcset="img/rice-small-mobile@2x.jpg 2x" alt="Cat Energy Pro 500г курица">
                   </picture>
                 </a>
               </div>
@@ -332,6 +357,9 @@
           </div>
         </div>
         <picture>
+          <source type="image/webp" media="(min-width: 1300px)" srcset="img/bg-map-desktop@1x.webp 1x, img/bg-map-desktop@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.webp 1x, img/bg-map-tablt@2x.webp 2x">
+          <source type="image/webp" srcset="img/bg-map-mobile@1x.webp 1x, img/bg-map-mobile@2x.webp 2x">
           <source media="(min-width: 1300px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
           <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablt@2x.png 2x">
           <img class="contacts__map-nojs" src="img/bg-map-mobile@1x.png" width="320" height="400" srcset="img/bg-map-mobile@2x.png 2x" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
@@ -372,7 +400,7 @@
         </div>
         <a class="page-footer__copyright" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
           <span>HTML Academy</span>
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="-10 0 60 60" fill="currentColor">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="-10 0 60 60" width="42" height="42" fill="currentColor">
             <use xlink:href="#icon-htmlacademy"></use>
           </svg>
         </a>
