--- a/source/programs.html
+++ b/source/programs.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
     <link href="css/style.min.css" rel="stylesheet">
+    <link rel="preload" href="fonts/oswaldregular.woff" as="font">
+    <link rel="preload" href="fonts/oswaldregular.woff2" as="font">
+    <link rel="preload" href="fonts/oswaldmedium.woff" as="font">
+    <link rel="preload" href="fonts/oswaldmedium.woff2" as="font">
     <script>document.createElement( "picture" );</script>
     <script src="js/picturefill.js" async></script>
   </head>
@@ -18,9 +22,9 @@
             <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="39" alt="CatEnergy">
           </picture>
         </a>
-        <button class="page-header__toggle page-header__toggle--off" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <button class="page-header__toggle page-header__toggle--off page-header__toggle--nojs" type="button"><span class="visually-hidden">Открыть меню</span></button>
       </div>
-      <nav class="page-header__nav main-nav main-nav--closed">
+      <nav class="page-header__nav main-nav">
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
             <li class="main-nav__item">
@@ -90,7 +94,7 @@
                   <label class="form__label" for="master-email">E-mail:*</label>
                   <input class="form__input form__input--email" type="email" id="master-email" name="master-email" placeholder="kuklachev@gmail.com" required="">
                   <span class="form__icon form__icon--email">
-                    <svg viewBox="0 0 17 13" fill="currentColor">
+                    <svg viewBox="0 0 17 13" width="18" height="14" fill="currentColor">
                       <use xlink:href="#icon-mail"></use>
                     </svg>
                   </span>
@@ -99,7 +103,7 @@
                   <label class="form__label" for="master-tel">Телефон:*</label>
                   <input class="form__input form__input--tel" type="tel" id="master-tel" name="master-tel" placeholder="8 (960) 900-60-90" required="">
                   <span class="form__icon form__icon--tel">
-                    <svg viewBox="0 0 20 20" fill="currentColor">
+                    <svg viewBox="0 0 20 20" width="21" height="21" fill="currentColor">
                       <use xlink:href="#icon-phone"></use>
                     </svg>
                   </span>
@@ -158,6 +162,9 @@
           </div>
         </div>
         <picture>
+          <source type="image/webp" media="(min-width: 1300px)" srcset="img/bg-map-desktop@1x.webp 1x, img/bg-map-desktop@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.webp 1x, img/bg-map-tablt@2x.webp 2x">
+          <source type="image/webp" srcset="img/bg-map-mobile@1x.webp 1x, img/bg-map-mobile@2x.webp 2x">
           <source media="(min-width: 1300px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
           <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablt@2x.png 2x">
           <img class="contacts__map-nojs" src="img/bg-map-mobile@1x.png" width="320" height="400" srcset="img/bg-map-mobile@2x.png 2x" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
@@ -198,7 +205,7 @@
         </div>
         <a class="page-footer__copyright" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
           <span>HTML Academy</span>
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="-10 0 60 60" fill="currentColor">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="-10 0 60 60" width="42" height="42" fill="currentColor">
             <use xlink:href="#icon-htmlacademy"></use>
           </svg>
         </a>
